tests/error/multi_decl.gw
#! [contains] from/to a multi-variable declaration
int i, ii => float f;
